# echoz-site

./: README.md  dune-project  echozsite.opam
src/: blog.ml  dune  error.ml  meta.ml  server.ml  template.eml.html
src/content/: burningzamal.md  index.md  zamalteam.md
src/content/assets/css/: prism.css  style.css
src/content/blog/: 2022_05_25_zamal_news.md
