(lang dune 2.0)

(name echozsite)

(license ISC)

(generate_opam_files true)

(package
 (name echozsite)
 (depends
  (ocaml
   (>= 4.10))
  (dream
   (>= 1.0.0~alpha2))
  (crunch
   (>= 3.2.0))
  (omd
   (>= 2.0.0~alpha2))
  (ubase
   (>= 0.04))
  (markup
   (>= 1.0.2))
  (lambdasoup
   (>= 0.7.2))
))
